--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -32,79 +32,117 @@
 
         <div class="tab-content">
             <div class="tab-pane active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
-                <h2>Personal Info</h2>
-                <form>
+                <div class="row">
+                    <div class="col-11">
+                        <h2>Personal Info</h2>
+                    </div>
+                    <div class="col-1">
+                        <button type="submit" id="updateForm" class="btn btn-primary" data-toggle="tooltip"
+                            data-placement="top" title="Update Personal Info">Update</button>
+                    </div>
+                </div>
+
+                {{!-- ======== DISABLED FORM ============= --}}
+                <form id="disabledForm">
+                    <fieldset disabled>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputEmail4">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputPassword4">Password</label>
+                                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress2">Address 2</label>
+                            <input type="text" class="form-control" id="inputAddress2"
+                                placeholder="Apartment, studio, or floor">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputCity">City</label>
+                                <input type="text" class="form-control" id="inputCity">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="inputState">State</label>
+                                <select id="inputState" class="form-control">
+                                    <option selected>Choose...</option>
+                                    <option>...</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label for="inputZip">Zip</label>
+                                <input type="text" class="form-control" id="inputZip">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck">
+                                <label class="form-check-label" for="gridCheck">
+                                    Check me out
+                                </label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    </fieldset>
+                </form>
+                <form id="newInfo" style="display: none;">
+
                     <div class="form-row">
-                        <div class="col-md-4 mb-3">
-                            <label for="validationServer01">First name</label>
-                            <input type="text" class="form-control is-valid" id="validationServer01"
-                                placeholder="First name" value="Mark" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Email</label>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                         </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="validationServer02">Last name</label>
-                            <input type="text" class="form-control is-valid" id="validationServer02"
-                                placeholder="Last name" value="Otto" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="validationServerUsername">Username</label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroupPrepend3">@</span>
-                                </div>
-                                <input type="text" class="form-control is-invalid" id="validationServerUsername"
-                                    placeholder="Username" aria-describedby="inputGroupPrepend3" required>
-                                <div class="invalid-feedback">
-                                    Please choose a username.
-                                </div>
-                            </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Password</label>
+                            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="inputAddress">Address</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputAddress2">Address 2</label>
+                        <input type="text" class="form-control" id="inputAddress2"
+                            placeholder="Apartment, studio, or floor">
+                    </div>
                     <div class="form-row">
-                        <div class="col-md-6 mb-3">
-                            <label for="validationServer03">City</label>
-                            <input type="text" class="form-control is-invalid" id="validationServer03"
-                                placeholder="City" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid city.
-                            </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputCity">City</label>
+                            <input type="text" class="form-control" id="inputCity">
                         </div>
-                        <div class="col-md-3 mb-3">
-                            <label for="validationServer04">State</label>
-                            <input type="text" class="form-control is-invalid" id="validationServer04"
-                                placeholder="State" required>
-                            <div class="invalid-feedback">
-                                Please provide a valid state.
-                            </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputState">State</label>
+                            <select id="inputState" class="form-control">
+                                <option selected>Choose...</option>
+                                <option>...</option>
+                            </select>
                         </div>
-                        <div class="col-md-3 mb-3">
-                            <label for="validationServer05">Zip</label>
-                            <input type="text" class="form-control is-invalid" id="validationServer05" placeholder="Zip"
-                                required>
-                            <div class="invalid-feedback">
-                                Please provide a valid zip.
-                            </div>
+                        <div class="form-group col-md-2">
+                            <label for="inputZip">Zip</label>
+                            <input type="text" class="form-control" id="inputZip">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-check">
-                            <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3"
-                                required>
-                            <label class="form-check-label" for="invalidCheck3">
-                                Agree to terms and conditions
+                            <input class="form-check-input" type="checkbox" id="gridCheck">
+                            <label class="form-check-label" for="gridCheck">
+                                Check me out
                             </label>
-                            <div class="invalid-feedback">
-                                You must agree before submitting.
-                            </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary" type="submit">Submit form</button>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+
+                </form>
             </div>
+
 
 
 
@@ -156,7 +194,7 @@
                                     placeholder="Type New Username" aria-describedby="inputGroupPrepend3">
                             </div>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label for="inputPassword4">Password</label>
                             <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
                         </div>
