--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -284,37 +284,75 @@ label:focus input::placeholder {
   display: block;
 }
 
-#checkBox {
+/* #checkBox {
   top: 5rem;
   left: 2rem;
   position: relative;
-}
+} */
 
 #customerDot {
   padding: 30%;
   background-color: red;
-  /* background: #4ea6d267; */
+  background: #4ea6d267;
   border-radius: 50%;
   width: fit-content;
   text-transform: uppercase;
-  /* font-size: 1.8em; */
+  font-size: 1.8em;
 }
 
-#modalDot {
+/* #modalDot {
   padding: 6%;
   justify-content: center;
   background-color: red;
   border-radius: 50%;
   margin-right: 40%;
   margin-left: 40%;
-}
+} */
 
 .modal-content {
-  background-color: #4ea5d2;
+  background-color: #7a6eb8;
   border: none;
 }
 
 .modal-header,
 .modal-footer {
   border: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.avatar {
+  width: 65px;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ccc;
+  border-radius: 50%;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  margin-right: 4%;
+}
+
+.ticketAv {
+  width: 70px;
+  height: 70px;
+}
+
+.modalAv {
+  margin-right: 40%;
+  margin-left: 37%;
+}
+
+.box {
+  float: left;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
