--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -47,59 +47,72 @@
                         <div class="buttons">
                             {{!-- <a id="showall">All</a> --}}
                             <div class="showSingle" target="1">
-                                <div id="colorpad" style="width:300px;height:300px;background-color:#000">
-
-                                </div>
-                                <button onclick="setRandomColor()">Random Color</button>
 
                                 <div class="card" id="smallTicket">
                                     <div class="container">
-                                        <div class="row mt-3">
-                                            <div class="col-1" id="checkBox">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value=""
-                                                        id="defaultCheck1">
+
+
+
+                                        <div class="card-body">
+
+                                            <div class="row">
+                                                <div class="col-1 align-self-center">
+                                                    <div class="form-check ml-2">
+                                                        <input class="form-check-input" type="checkbox" value=""
+                                                            id="defaultCheck1">
+                                                    </div>
+                                                </div>
+                                                <div class="col-11">
+                                                    <div class="card-body px-0">
+                                                        <div class="row">
+                                                            <div class="col-12 mb-4">
+                                                                <div class="box">
+                                                                    <a href="" class="customerBtn ready"
+                                                                        data-toggle="modal"
+                                                                        data-target="#exampleModalCenter" id="ready">
+                                                                        <div class="avatar">CD</div>
+                                                                    </a>
+                                                                </div>
+                                                                <div class="box">
+
+                                                                    <h3 class="mt-3 ml-3" id="customerName">
+                                                                        Cathy
+                                                                        Dates</h3>
+
+                                                                </div>
+                                                                <div class="box" id="ticketDate"
+                                                                    style="margin-left:32%;">
+                                                                    <p>May 23rd 2020</p>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="col-12">
+                                                                <h6 class="card-subtitle mb-2 text-muted">
+                                                                    Questions for you!
+                                                                </h6>
+                                                                <p class="card-text">Some quick example text to
+                                                                    build on the
+                                                                    card
+                                                                    title
+                                                                    and
+                                                                    make up
+                                                                    the bulk
+                                                                    of
+                                                                    the card's content.</p>
+                                                            </div>
+                                                        </div>
+
+
+
+
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="col-11">
-                                                <div class="card-body">
-                                                    <div class="row mb-2">
-                                                        <div class="col-2">
-                                                            <a href="" class="customerBtn" data-toggle="modal"
-                                                                data-target="#exampleModalCenter">
-                                                                <h5 class="text-center" id="customerDot">CD
-                                                                </h5>
-                                                            </a>
-
-                                                        </div>
-                                                        <div class="col-6 mt-3">
-                                                            <a href="" class="customerBtn" data-toggle="modal"
-                                                                data-target="#exampleModalCenter" id="ready">
-                                                                <h3 id="customerName">Cathy Dates</h3>
-                                                            </a>
-
-                                                        </div>
-                                                        <div class="col-4" id="ticketDate">May 23rd 2020</div>
-                                                    </div>
 
 
-                                                    <div class="container">
-                                                        <h6 class="card-subtitle mb-2 text-muted">Questions for you!
-                                                        </h6>
-                                                        <p class="card-text">Some quick example text to build on the
-                                                            card
-                                                            title
-                                                            and
-                                                            make up
-                                                            the bulk
-                                                            of
-                                                            the card's content.</p>
-                                                    </div>
-
-
-                                                </div>
-                                            </div>
                                         </div>
+
+
                                     </div>
                                 </div>
                             </div>
@@ -214,66 +227,70 @@
                             <div class="card" id="ticketBody">
                                 <div class="card-body mt-3">
 
-                                    <div class="container">
+                                    <div class="container ml-3">
                                         <div class="row mt-3">
+                                            <div class="card-body px-0">
+                                                <div class="row">
+                                                    <div class="col-12 mb-4">
+                                                        <div class="box">
+                                                            <a href="" class="customerBtn ready" data-toggle="modal"
+                                                                data-target="#exampleModalCenter" id="ready">
+                                                                <div class="avatar">CD</div>
+                                                            </a>
+                                                        </div>
+                                                        <div class="box">
 
+                                                            <h3 class="mt-3 ml-3" id="customerName">
+                                                                Cathy
+                                                                Dates</h3>
 
-                                            <div class="card-body">
-                                                <div class="row mb-2">
-                                                    <div class="col-2">
-                                                        <a href="#" id="ready" data-toggle="modal"
-                                                            data-target="#exampleModalCenter">
-                                                            <h5 class="card-title text-center" id="customerDot">CD
-                                                            </h5>
-                                                        </a>
+                                                        </div>
+                                                        <div class="box" id="ticketDate" style="margin-left: 50%;">
+                                                            <p>May 23rd 2020</p>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="col-12">
+                                                        <div class="container">
+                                                            <h6 class="card-subtitle mb-2 text-muted">Questions for you!
+                                                            </h6>
+                                                            <p class="card-text">Some quick example text to build on the
+                                                                card title
+                                                                and
+                                                                make up
+                                                                the bulk
+                                                                of
+                                                                the card's content.</p>
+
+                                                            <p class="card-text">Some quick example text to build on the
+                                                                card title and
+                                                                make
+                                                                up
+                                                                the bulk
+                                                                of
+                                                                the card's content.
+                                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                                Voluptate,
+                                                                earum
+                                                                animi rem
+                                                                rerum impedit sunt magni, accusantium eum eaque
+                                                                consequuntur, optio
+                                                                assumenda neque
+                                                                dolorem tenetur qui officiis ullam sequi illum! Lorem
+                                                                ipsum
+                                                                dolor sit
+                                                                amet
+                                                                consectetur adipisicing elit. Vel expedita obcaecati
+                                                                numquam. </p>
+                                                        </div>
 
                                                     </div>
-                                                    <div class="col-7 mt-3">
-                                                        <a class="customerBtn" href="#" data-toggle="modal"
-                                                            data-target="#exampleModalCenter" id="ready">
-                                                            <h3 id="customerName">Cathy Dates</h3>
-                                                        </a>
-
-                                                    </div>
-                                                    <div class="col-3" id="ticketDate">May 23rd 2020</div>
                                                 </div>
 
 
-                                                <div class="container mt-5">
-                                                    <h6 class="card-subtitle mb-2 text-muted">Questions for you!
-                                                    </h6>
-                                                    <p class="card-text">Some quick example text to build on the
-                                                        card title
-                                                        and
-                                                        make up
-                                                        the bulk
-                                                        of
-                                                        the card's content.</p>
-
-                                                    <p class="card-text">Some quick example text to build on the
-                                                        card title and
-                                                        make
-                                                        up
-                                                        the bulk
-                                                        of
-                                                        the card's content.
-                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                        Voluptate,
-                                                        earum
-                                                        animi rem
-                                                        rerum impedit sunt magni, accusantium eum eaque
-                                                        consequuntur, optio
-                                                        assumenda neque
-                                                        dolorem tenetur qui officiis ullam sequi illum! Lorem ipsum
-                                                        dolor sit
-                                                        amet
-                                                        consectetur adipisicing elit. Vel expedita obcaecati
-                                                        numquam. </p>
-                                                </div>
 
 
                                             </div>
-
 
 
                                         </div>
@@ -501,9 +518,9 @@
 
     </div>
 
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+    <div class="modal fade bd-example-modal-sm" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-header">
 
@@ -512,25 +529,28 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
+                    {{!-- 
+                    <h3 id="modalDot">CD</h3> --}}
+                    <h3 class="modalAv avatar">CD</h3>
+                    <h3>Cathy Dates</h3>
 
-                    <h3 id="modalDot">CD</h3>
-                    <h1>Cathy Dates</h1>
-
-                    <p>cathydates@gmail.com</p>
+                    <p class="text-lighjt">cathydates@gmail.com</p>
                     <p id="logMsg"></p>
-                    <button type="button" id="call" class="btn btn-success">
-                        Call 5045154776
-                    </button>
-                    <button type="button" id="hangup" class="btn btn-danger" data-dismiss="modal" aria-label="Close"
-                        style="display: none;">
-                        End Call
-                    </button>
+                    <div class="mb-2">
+                        <button type="button" id="call" class="btn btn-outline-light mb-3">
+                            Call 5045154776
+                        </button>
+                        <button type="button" id="hangup" class="btn btn-danger" data-dismiss="modal" aria-label="Close"
+                            style="display: none;">
+                            End Call
+                        </button>
+                    </div>
+
                 </div>
 
             </div>
         </div>
     </div>
-
 
 </div>
 </div>
@@ -548,19 +568,24 @@
     });
 
 
-    function getRandomColor() {
-        var letters = '0123456789ABCDEF';
-        var color = '#';
-        for (var i = 0; i < 6; i++) {
-            color += letters[Math.floor(Math.random() * 16)];
-        }
-        return color;
+    const colors = ["#00AA55", "#009FD4", "#B381B3", "#939393", "#E3BC00", "#D47500", "#DC2A2A"];
+
+    function numberFromText(text) { // numberFromText("AA");
+        const charCodes = text
+            .split('') // => ["A", "A"] 
+            .map(char => char.charCodeAt(0)) // => [65, 65]
+            .join(''); // => "6565"
+        return parseInt(charCodes, 10);
     };
 
+    const avatars = document.querySelectorAll('.avatar');
 
-    function setRandomColor() {
-        $("#colorpad").css("background-color", getRandomColor());
-    }
+    avatars.forEach(avatar => {
+        const text = avatar.innerText; // => "AA"
+        avatar.style.backgroundColor = colors[numberFromText(text) % colors.length]; // => "#DC2A2A"
+    });
+
+
 
 </script>
 
